implementations/rust/ockam/ockam/tests/node/fail_if_macro_has_arg.stderr
error: This macro doesn't accept any argument
 --> tests/node/fail_if_macro_has_arg.rs:1:15
  |
1 | #[ockam::node(timeout = 100)]
  |               ^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/node/fail_if_macro_has_arg.rs:1:1
  |
1 | / #[ockam::node(timeout = 100)]
2 | | async fn main(mut c: ockam::Context) {
3 | |     c.stop().await.unwrap();
4 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/node/fail_if_macro_has_arg.rs`
